fix contact button on iPhone4

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -47,6 +47,9 @@ section.contact {
       border-color: rgba(white, 1);
       transition: 0s;
     }
+    @media all and (max-width: $breakpoint) {
+      font-size: 1em;
+    }
   }
 }
 
